Suggestion widget: Fix overflowing text problem (fixes #20679)

--- a/src/vs/editor/contrib/suggest/browser/suggest.css
+++ b/src/vs/editor/contrib/suggest/browser/suggest.css
@@ -172,7 +172,8 @@
 }
 
 .monaco-editor .suggest-widget .details > .header > .title {
-	flex: 2;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .monaco-editor .suggest-widget .details > .header > .go-back {
